--- a/#source/footer.html
+++ b/#source/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-   <div class="footer__background"><img src="../img/background_161.jpg" alt="">
+   <div class="footer__background"><img src="../img/footer.jpg" alt="">
       <div class="footer__logo"><img src="../img/logo_small.png" alt=""></div>
       <ul class="footer__list">
          <li>Home</li>
