--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
    <div class="picture">
-      <img src="../img/bg_header_743.jpg" alt="">
+      <img src="../img/header.jpg" alt="">
       <div class="picture__logo"><img src="../img/layer_33_copy_2_859.png" alt=""></div>
       <div class="picture__logo-text1">Clear, smart, attractive design</div>
       <div class="picture__logo-text2">for your app, logo, website</div>
@@ -139,10 +139,8 @@
       <button type="submit" class="send">send</button>
    </form>
 
-
-
    <div class="footer">
-   <div class="footer__background"><img src="../img/background_161.jpg" alt="">
+   <div class="footer__background"><img src="../img/footer.jpg" alt="">
       <div class="footer__logo"><img src="../img/logo_small.png" alt=""></div>
       <ul class="footer__list">
          <li>Home</li>
