--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
    <div class="picture">
-      <img src="../img/header.jpg" alt="">
+      <img src="img/header.jpg" alt="">
       <div class="picture__logo"><img src="../img/layer_33_copy_2_859.png" alt=""></div>
       <div class="picture__logo-text1">Clear, smart, attractive design</div>
       <div class="picture__logo-text2">for your app, logo, website</div>
@@ -97,7 +97,7 @@
       </div>
       <a href="#" class="button2">Read more</a>
    </div>
-   <div class="picture2"><img src="../img/partners.png" alt="">
+   <div class="picture2"><img src="img/partners.png" alt="">
       <div class="picture2__text">Our partners</div>
       <ul class="picture2__menu">
          <li class="picture2__icon"><img src="../img/icons/logo.png" alt=""></li>
@@ -140,7 +140,7 @@
    </form>
 
    <div class="footer">
-   <div class="footer__background"><img src="../img/footer.jpg" alt="">
+   <div class="footer__background"><img src="img/footer.jpg" alt="">
       <div class="footer__logo"><img src="../img/logo_small.png" alt=""></div>
       <ul class="footer__list">
          <li>Home</li>
