--- a/#source/footer.html
+++ b/#source/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
    <div class="footer__background"><img src="img/footer.jpg" alt="">
-      <div class="footer__logo"><img src="../img/logo_small.png" alt=""></div>
+      <div class="footer__logo"><img src="img/logo_small.png" alt=""></div>
       <ul class="footer__list">
          <li>Home</li>
          <li>Facebook</li>
