--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
    <div class="picture">
       <img src="img/header.jpg" alt="">
-      <div class="picture__logo"><img src="../img/layer_33_copy_2_859.png" alt=""></div>
+      <div class="picture__logo"><img src="img/layer_33_copy_2_859.png" alt=""></div>
       <div class="picture__logo-text1">Clear, smart, attractive design</div>
       <div class="picture__logo-text2">for your app, logo, website</div>
       <div class="picture__logo-line"></div>
-      <div class="picture__logo-icon"><img src="../img/icons/arrow_down_30.png" alt=""></div>
+      <div class="picture__logo-icon"><img src="img/icons/arrow_down_30.png" alt=""></div>
    </div>
    <a href="#" class="button">Read more</a>
 
@@ -43,7 +43,7 @@
          <div class="about__row">
             <div class="about__column">
                <div class="item-about">
-                  <div class="item-about__icon"><img src="../img/about/web.png" alt=""></div>
+                  <div class="item-about__icon"><img src="/img/about/web.png" alt=""></div>
                   <div class="item-about__title">WEB</div>
                   <div class="item-about__text">We tend to deliver unique and
                      functional design, through
@@ -52,7 +52,7 @@
             </div>
             <div class="about__column">
                <div class="item-about">
-                  <div class="item-about__icon"><img src="../img/about/iaa.png" alt=""></div>
+                  <div class="item-about__icon"><img src="img/about/iaa.png" alt=""></div>
                   <div class="item-about__title">iOS AND ANDROID</div>
                   <div class="item-about__text">We tend to deliver unique and functional design, through innovation and
                      creativity.</div>
@@ -60,7 +60,7 @@
             </div>
             <div class="about__column">
                <div class="item-about">
-                  <div class="item-about__icon"><img src="../img/about/mg.png" alt=""></div>
+                  <div class="item-about__icon"><img src="img/about/mg.png" alt=""></div>
                   <div class="item-about__title">MARKETING</div>
                   <div class="item-about__text">We tend to deliver unique and
                      functional design, through
@@ -100,10 +100,10 @@
    <div class="picture2"><img src="img/partners.png" alt="">
       <div class="picture2__text">Our partners</div>
       <ul class="picture2__menu">
-         <li class="picture2__icon"><img src="../img/icons/logo.png" alt=""></li>
-         <li class="picture2__icon"><img src="../img/icons/archiq_102.png" alt=""></li>
-         <li class="picture2__icon"><img src="../img/icons/thomsoon_135.png" alt=""></li>
-         <li class="picture2__icon"><img src="../img/icons/alex_101.png" alt=""></li>
+         <li class="picture2__icon"><img src="img/icons/logo.png" alt=""></li>
+         <li class="picture2__icon"><img src="img/icons/archiq_102.png" alt=""></li>
+         <li class="picture2__icon"><img src="img/icons/thomsoon_135.png" alt=""></li>
+         <li class="picture2__icon"><img src="img/icons/alex_101.png" alt=""></li>
       </ul>
    </div>
 
@@ -141,7 +141,7 @@
 
    <div class="footer">
    <div class="footer__background"><img src="img/footer.jpg" alt="">
-      <div class="footer__logo"><img src="../img/logo_small.png" alt=""></div>
+      <div class="footer__logo"><img src="img/logo_small.png" alt=""></div>
       <ul class="footer__list">
          <li>Home</li>
          <li>Facebook</li>
