--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
    <a href="#" class="button">Read more</a>
 
    <div class="header">
-   <ul class="header__menu">
-      <li class="header__menu-link header__menu-link-active"><a href="#">HOME</a>
-      <li class="header__menu-link"><a href="#">ABOUT US</a>
-      <li class="header__menu-link"><a href="#">PORTFOLIO</a>
-      <li class="header__menu-link"><a href="#">CONTACT</a>
-   </ul>
-</div>
+      <ul class="header__menu">
+         <li class="header__menu-link header__menu-link-active"><a href="#">HOME</a>
+         <li class="header__menu-link"><a href="#">ABOUT US</a>
+         <li class="header__menu-link"><a href="#">PORTFOLIO</a>
+         <li class="header__menu-link"><a href="#">CONTACT</a>
+      </ul>
+   </div>
 
 
    <div class="about">
@@ -43,7 +43,7 @@
          <div class="about__row">
             <div class="about__column">
                <div class="item-about">
-                  <div class="item-about__icon"><img src="/img/about/web.png" alt=""></div>
+                  <div class="item-about__icon"><img src="img/about/web.png" alt=""></div>
                   <div class="item-about__title">WEB</div>
                   <div class="item-about__text">We tend to deliver unique and
                      functional design, through
@@ -127,9 +127,9 @@
                   <br>I'm here to help.</br>
                </div>
                <div class="forma__avtor-name">Postma Elena</div>
-               <div class="forma__icon1"><a href="http://www.facebook.com"><img src="../img/icons/f.png" alt=""></a>
+               <div class="forma__icon1"><a href="http://www.facebook.com"><img src="img/icons/f.png" alt=""></a>
                </div>
-               <div class="forma__icon2"><a href="http://www.instagram.com"><img src="../img/icons/in.png" alt=""></a>
+               <div class="forma__icon2"><a href="http://www.instagram.com"><img src="img/icons/in.png" alt=""></a>
                </div>
                <div class="forma__contact">e-mail: <span>postma.elena@gmail.com</span></div>
             </div>
@@ -140,17 +140,17 @@
    </form>
 
    <div class="footer">
-   <div class="footer__background"><img src="img/footer.jpg" alt="">
-      <div class="footer__logo"><img src="img/logo_small.png" alt=""></div>
-      <ul class="footer__list">
-         <li>Home</li>
-         <li>Facebook</li>
-         <li>Linkedin</li>
-         <li>Contact</li>
-      </ul>
-      <div class="footer__text">© 2015. All Rights Reserved</div>
+      <div class="footer__background"><img src="img/footer.jpg" alt="">
+         <div class="footer__logo"><img src="img/logo_small.png" alt=""></div>
+         <ul class="footer__list">
+            <li>Home</li>
+            <li>Facebook</li>
+            <li>Linkedin</li>
+            <li>Contact</li>
+         </ul>
+         <div class="footer__text">© 2015. All Rights Reserved</div>
+      </div>
    </div>
-</div>
 
 </body>
 
