--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
    <div class="header">
       <ul class="header__menu">
          <li class="header__menu-link header__menu-link-active"><a href="#">HOME</a>
-         <li class="header__menu-link"><a href="#">ABOUT US</a>
-         <li class="header__menu-link"><a href="#">PORTFOLIO</a>
-         <li class="header__menu-link"><a href="#">CONTACT</a>
+         <li class="header__menu-link"><a href="#about">ABOUT US</a>
+         <li class="header__menu-link"><a href="#portfolio">PORTFOLIO</a>
+         <li class="header__menu-link"><a href="#contact">CONTACT</a>
       </ul>
    </div>
 
-
+   <a name="about"></a>
    <div class="about">
       <div class="about__body">
          <div class="about__header">
@@ -70,16 +70,16 @@
          </div>
       </div>
    </div>
-
+   <a name="portfolio"></a>
    <div class="title">portfolio</div>
    <div class="logo-line"></div>
 
    <div class="header">
       <ul class="header__menu">
-         <li class="header__menu-link header__menu-link-active"><a href="#">ALL</a>
-         <li class="header__menu-link"><a href="#">WEB</a>
-         <li class="header__menu-link"><a href="#">APPS</a>
-         <li class="header__menu-link"><a href="#">OTHER</a>
+         <li class="header__menu-link header__menu-link-active"><a href="#portfolio">ALL</a>
+         <li class="header__menu-link"><a href="#portfolio">WEB</a>
+         <li class="header__menu-link"><a href="#portfolio">APPS</a>
+         <li class="header__menu-link"><a href="#portfolio">OTHER</a>
       </ul>
    </div>
    <div class="photo">
@@ -106,7 +106,7 @@
          <li class="picture2__icon"><img src="img/icons/alex_101.png" alt=""></li>
       </ul>
    </div>
-
+   <a name="contact"></a>
    <div class="title">CONTACT</div>
    <div class="logo-line"></div>
 
